added photo, and fixed navbar spacing issues

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
+                <!-- <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" /> -->
+                <img class="masthead-avatar mb-5" src="./assets/img/chris-porthole.png" alt="man with beard and yellow raincoat stands in front of sign that says Tower Bridge" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Christopher Butcher</h1>
                 <!-- Icon Divider-->
@@ -465,7 +466,7 @@
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window 
+                                        Close Window
                                     </button>
                                 </div>
                             </div>
