added about me, updated game links

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </div> -->
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher. I am a Game Programmer, Sound Designer, & Composer. I love music, video games, and learning new things, which is why I pursued a BS in Game Design after receiving a BA in Instrumental Music Education. </p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">In both video games & music, I play a little bit of everything, but I'm a sucker for a synthesizer and a dungeon crawler. I currently live in Bloomington, Indiana with my partner Ginger & our dog Ripley. Feel free to drop me a line if you want to talk about Metroidvanias or ska, or anything really!</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -117,7 +117,7 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Robin's Quest</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Robin's Quest!</div>
                             </div>
                             <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies." />
                         </div>
@@ -299,8 +299,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/bos1.jpg" alt="a robot gives a thumbs up while behind it a computer explodes" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"><i>Manage your station & oversee your crew from the “comfort” of your office. In this management simulator, balance resources & fix problems to maintain your new home among the stars in Breach of Space.</i></p>
-                                    <p class="mb-5">
+                                    <p class="mb-5 text-justify"><i>Manage your station & oversee your crew from the “comfort” of your office. In this management simulator, balance resources & fix problems to maintain your new home among the stars in Breach of Space.</i></p>
+                                    <p class="mb-5 text-justify">
                                     Breach of Space is a management simulator, best described as Overcooked meets Five Nights at Freddy's in space. I serve as Lead Programmer & Sound Designer on this ongoing project. Our projected release date is February 22, 2022.</p>
                                     <h4>Learn More:</h4><p></p>
                                         <a href="https://sites.google.com/iu.edu/breachofspace/home" target="blank"><button class="btn btn-primary">
@@ -310,6 +310,10 @@
                                     <a href="https://www.youtube.com/watch?v=f0CcI5PZiTs&feature=youtu.be&ab_channel=ChristopherButcher" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         Overview video
+                                    </button></a>
+                                    <a href="https://bitbucket.org/christopherbutcher/breach-of-space-v3/src/master/" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Code Bitbucket
                                     </button></a>
                                     </p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -345,8 +349,13 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Codetta4.JPG" alt="Pixel-art instruments gather around in a kind of dance" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"><i>In Codetta, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
-                                    <p class="mb-5">The goal of Codetta was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
+                                    <p class="mb-5 text-justify"><i>In Codetta, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
+                                    <p class="mb-5 text-justify">The goal of Codetta was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
+                                    <h4>Play the Game:</h4><p></p><p>
+                                        <a href="https://chrbutch.pages.iu.edu/Codetta/" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Codetta (playable in Browser)
+                                    </button></a></p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -370,7 +379,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Robin's Quest</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Robin's Quest!</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -380,9 +389,14 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies.'" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"><i>Robin's Quest! is about a princess who awakens to find her kingdom overrun with monsters. She must venture across her lands to figure out what is causing this mayhem and how to stop it!</i></p>
-                                    <p class="mb-5">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
+                                    <p class="mb-5 text-justify"><i>Robin's Quest! is about a princess who awakens to find her kingdom overrun with monsters. She must venture across her lands to figure out what is causing this mayhem and how to stop it!</i></p>
+                                    <p class="mb-5 text-justify">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
                                     </p>
+                                    <h4>Learn More:</h4><p></p><p>
+                                        <a href="https://bitbucket.org/chrstphrbtchr/robins_quest/src/master/" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Code Bitbucket
+                                    </button></a></p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -416,8 +430,13 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Scare-Away3.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"><i>Survive the night at camp, scare some teenagers, and collect the most important pages of your afterlife!</i></p>
-                                    <p class="mb-5">Scare-Away Camp is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
+                                    <p class="mb-5 text-justify"><i>Survive the night at camp, scare some teenagers, and collect the most important pages of your afterlife!</i></p>
+                                    <p class="mb-5 text-justify">Scare-Away Camp is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
+                                    <h4>Play the Game:</h4><p></p><p>
+                                        <a href="https://chrstphrbtchr.itch.io/scare-away-camp" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Scare-Away Camp on itch.io
+                                    </button></a></p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -486,7 +505,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
