--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a> -->
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/chrstphrbtchr"><i class="fab fa-fw fa-twitter" target="blank"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/-christopherbutcher/" target="blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-bitbucket"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://bitbucket.org/christopherbutcher/" target="blank"><i class="fab fa-fw fa-bitbucket"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="mailto:christopher@christopherbutchergames.com"><i class="fas fa-envelope"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            <a href="http://startbootstrap.com" style="color: white;">Start Bootstrap</a>
                             .
                         </p>
                     </div>
@@ -297,7 +297,27 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/bos1.jpg" alt="a robot gives a thumbs up while behind it a computer explodes" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/bos1.jpg" alt="a robot gives a thumbs up while behind it a computer explodes" /> -->
+
+                                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/bos1.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/bos2.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                          </div>
+                                          
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify"><i>Manage your station & oversee your crew from the “comfort” of your office. In this management simulator, balance resources & fix problems to maintain your new home among the stars in Breach of Space.</i></p>
                                     <p class="mb-5 text-justify">
@@ -347,7 +367,31 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Codetta4.JPG" alt="Pixel-art instruments gather around in a kind of dance" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Codetta4.JPG" alt="Pixel-art instruments gather around in a kind of dance" /> -->
+                                    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/Codetta4.JPG" class="d-block w-100 rounded " alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/Codetta1.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/Codetta2.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/Codetta3.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify"><i>In Codetta, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
                                     <p class="mb-5 text-justify">The goal of Codetta was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
@@ -387,7 +431,34 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies.'" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies.'" /> -->
+                                    <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/rq2.JPG" class="d-block w-100 rounded " alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/rq1.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/rq3.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/rq4.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/rq5.JPG" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify"><i>Robin's Quest! is about a princess who awakens to find her kingdom overrun with monsters. She must venture across her lands to figure out what is causing this mayhem and how to stop it!</i></p>
                                     <p class="mb-5 text-justify">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
@@ -428,7 +499,28 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Scare-Away3.png" alt="" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Scare-Away3.png" alt="" /> -->
+                                    <div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/Scare-Away3.png" class="d-block w-100 rounded " alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/Scare-Away1.png" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/Scare-Away2.png" class="d-block w-100 rounded" alt="...">
+                                          </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls4" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls4" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify"><i>Survive the night at camp, scare some teenagers, and collect the most important pages of your afterlife!</i></p>
                                     <p class="mb-5 text-justify">Scare-Away Camp is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
@@ -472,6 +564,12 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"><i></i></p>
                                     <p class="mb-5"></p>
+                                    <h4>Learn More:</h4><p></p><p>
+                                        <a href="https://bitbucket.org/christopherbutcher/gridworld/src/master/" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Code Bitbucket
+                                    </button></a></p><br/>
+                                    
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -505,7 +603,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">Information Coming Soon.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
