added contributions page and styles for it

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Breach of Space</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/bos1.jpg" alt="a robot gives a thumbs up while behind it a computer explodes" />
+                            <img class="img-fluid" src="./assets/img/portfolio/bos3.png" alt="a robot gives a thumbs up while behind it a computer explodes" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -302,6 +302,9 @@
                                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/bos3.png" class="d-block w-100 img-fluid rounded mb-5" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
                                             <img src="./assets/img/portfolio/bos1.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="...">
                                           </div>
                                           <div class="carousel-item">
@@ -323,17 +326,21 @@
                                     <p class="mb-5 text-justify">
                                     Breach of Space is a management simulator, best described as Overcooked meets Five Nights at Freddy's in space. I serve as Lead Programmer & Sound Designer on this ongoing project. Our projected release date is February 22, 2022.</p>
                                     <h4>Learn More:</h4><p></p>
+                                        <a href="./pages/bos_contributions.html" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Personal Contributions
+                                    </button></a><p></p>
                                         <a href="https://sites.google.com/iu.edu/breachofspace/home" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         Design Wiki
                                     </button></a>
-                                    <a href="https://www.youtube.com/watch?v=f0CcI5PZiTs&feature=youtu.be&ab_channel=ChristopherButcher" target="blank"><button class="btn btn-primary">
+                                    <a href="https://youtu.be/i_7PSSTxKnA" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Overview video
+                                        Teaser Trailer
                                     </button></a>
                                     <a href="https://bitbucket.org/christopherbutcher/breach-of-space-v3/src/master/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Code Bitbucket
+                                        Bitbucket Repo
                                     </button></a>
                                     </p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
