Updated Breach of Space aspects.
Updated for review.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </div> -->
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher. I am a Game Programmer, Sound Designer, & Composer. I love music, video games, and learning new things, which is why I pursued a BS in Game Design after receiving a BA in Instrumental Music Education. </p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">In both video games & music, I play a little bit of everything, but I'm a sucker for a synthesizer and a dungeon crawler. I currently live in Bloomington, Indiana with my partner Ginger & our dog Ripley. Feel free to drop me a line if you want to talk about Metroidvanias or ska, or anything really!</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -322,9 +322,10 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>Manage your station & oversee your crew from the “comfort” of your office. In this management simulator, balance resources & fix problems to maintain your new home among the stars in Breach of Space.</i></p>
+                                    <p class="mb-5 text-justify"><i>In </i>Breach of Space<i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </i></p>
                                     <p class="mb-5 text-justify">
-                                    Breach of Space is a management simulator, best described as Overcooked meets Five Nights at Freddy's in space. I serve as Lead Programmer & Sound Designer on this ongoing project. Our projected release date is February 22, 2022.</p>
+                                        Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. <i>Breach of Space</i> is currently slated for release on February 22nd, 2022. Our team has recently doubled in size, and we plan on spending the summer completing the game with the help of our new members. <i>Breach of Space</i> is made in Unity with FMOD Studio integration.
+                                    </p>
                                     <h4>Learn More:</h4><p></p>
                                         <a href="./pages/bos_contributions.html" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
