--- a/index.html
+++ b/index.html
@@ -117,36 +117,36 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Robin's Quest!</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Survival Shooter Template Soundtrack</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies." />
+                            <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="Brightly-colored zombified creatures approach a child in a miniature world" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Scare-Away Camp</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Gridworld</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/Scare-Away3.png" alt="" />
+                            <img class="img-fluid" src="./assets/img/portfolio/Scare-Away3.png" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Gridworld</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Robin's Quest!</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/Gridworld1.JPG" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
+                            <img class="img-fluid" src="./assets/img/portfolio/Gridworld1.JPG" alt="In pixel art, there is a small room with a red haired character and text that says 'You got the swordarang, press spacebar to throw it at your enemies." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white">Out of the Void</div>
+                                <div class="portfolio-item-caption-content text-center text-white">Scare-Away CAmp</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="A teenager with purple hair shines a flashlight towards the camera in a dark, open forest" />
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-2"></div>
-                    <div class="col-lg-8"><p class="lead text-justify">I've played with orchestras, in jazz combos, and even been on two tours with a punk band. Now, I'm focusing on composing, specifically for video games. Although upright bass is my primary instrument, I can play a little bit of anything thanks to my degree in Instrumental Music Education. These days I write mostly on guitar, bass, and keyboard. As for composing & recording, I use Reason 11, ProTools, Adobe Audition, and FamiStudio.</p>
+                    <div class="col-lg-8"><p class="lead text-justify">I've played with orchestras, in jazz combos, and even been on a couple of tours with a punk band. Now, I'm focusing on composing for video games & sound design. Although upright bass is my primary instrument, I can play a little bit of anything thanks to my degree in Instrumental Music Education. These days I write mostly on guitar, bass, and keyboard. As for composing & recording, I use Reason 11, ProTools, Adobe Audition, and FamiStudio.</p>
                     <iframe style="border: 4px solid #e0f0df; border-radius: 4px; width: 100%; height: 300px; padding-right: 0px;" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
                     </div>
 
@@ -468,7 +468,7 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>Robin's Quest! is about a princess who awakens to find her kingdom overrun with monsters. She must venture across her lands to figure out what is causing this mayhem and how to stop it!</i></p>
+                                    <p class="mb-5 text-justify"><i>Robin's Quest! is about a princess who wakes to find her kingdom overrun with monsters. She must venture across her kingdom to figure out what is causing this mayhem and how to stop it!</i></p>
                                     <p class="mb-5 text-justify">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
                                     </p>
                                     <h4>Learn More:</h4><p></p><p>
