Slight formatting changes.
Emphasis updated.

--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>In Codetta, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
-                                    <p class="mb-5 text-justify">The goal of Codetta was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
+                                    <p class="mb-5 text-justify"><i>In</i> Codetta<i>, you play as a discarded reel-to-reel player in a world without music. You must guide your character through the 1-bit world to save the forgotten instruments from slimes & bring them together. </i></p>
+                                    <p class="mb-5 text-justify">The goal of <i>Codetta</i> was to craft a short game (less than five minutes) with an emphasis on art style and sound design over the course of six weeks in late 2020. In addition to programming, I composed all of the music, edited & mixed the sound effects, created all art assets, and designed the layout for the game. Fonts & original sound effects were found online under the CC0 license. My idea for the game focused on outliving your perceived obsolescence, and how important it is to find a community you feel comfortable in. It was my first time using Construct 3.</p>
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrbutch.pages.iu.edu/Codetta/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
@@ -468,7 +468,7 @@
                                         </a>
                                       </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5 text-justify"><i>Robin's Quest! is about a princess who wakes to find her kingdom overrun with monsters. She must venture across her kingdom to figure out what is causing this mayhem and how to stop it!</i></p>
+                                    <p class="mb-5 text-justify">Robin's Quest! <i>is about a princess who wakes to find her kingdom overrun with monsters. She must venture across her kingdom to figure out what is causing this mayhem and how to stop it!</i></p>
                                     <p class="mb-5 text-justify">Over the summer of 2020, I wanted to find a project to keep myself busy while also teaching myself more about Unity implementation & C# programming. So I gave myself a challenge: make a clone of The Legend of Zelda: A Link to the Past in Unity. While I've had to pause work on it to focus on other projects, it was invaluable to my education and I plan on finishing it during summer 2021.
                                     </p>
                                     <h4>Learn More:</h4><p></p><p>
@@ -531,7 +531,7 @@
                                       </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify"><i>Survive the night at camp, scare some teenagers, and collect the most important pages of your afterlife!</i></p>
-                                    <p class="mb-5 text-justify">Scare-Away Camp is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
+                                    <p class="mb-5 text-justify"><i>Scare-Away Camp</i> is a low-poly first-person survival horror game where you play as a ghost stuck on the wrong side of the veil. You must collect pages to an ancient tome that will help you return home. This was my first ever game, kit bashed myself using Unity and found assets over the course of three weeks. My partner & I also make our voice acting debut as scared teenagers.</p>
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrstphrbtchr.itch.io/scare-away-camp" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
